--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/pitt-challenge2018.css">
 
     {{content-for "head-footer"}}
+    <link rel="img" href="/Users/stevenbarash/Developer/pittchallenge2018/PittChallenge2018/public/line-graph-dribbbble.gif" type="image">
   </head>
   <body>
     {{content-for "body"}}
